--- a/views/front.ejs
+++ b/views/front.ejs
@@ -1,89 +1,11 @@
 
         <%- partial("header") %>
 
-
 <article id="leader">
   <h1>Real time code collaboration with an&nbsp;audience</h1>
   <p>Like Gist without the waiting.</p>
 </article>
 
-<section id="stage-list">
-
-  <h1>Join a recently active stage</h1>
-
-  <form id="search">
-    <input type="text" placeholder="Search for a specific stage">
-  </form>
-  
-  <a href="#" id="stage1"> <!-- NOTE: These stage IDs can be whatever id we give them in the db, and don't need to be 1, 2, 3, etc. -->
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage2">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage3">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage4">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage5">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage6">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage7">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage8">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-  <a href="#" id="stage9">
-    <h1>Stage Name</h1>
-    <h2>Language</h2>
-    <p>There's 4 people in here</p>
-    <small>Stage created by Chris Powers</small>
-  </a>
-
-
-  <a href="#" id="create">
-    <p>Create your own stage now</p>
-  </a>
-
-</section>
-
+        <%- partial("stage-list") %>
 
         <%- partial("footer") %>
