--- a/views/stages/index.ejs
+++ b/views/stages/index.ejs
@@ -1,4 +1,5 @@
-<h3><a href="/stages/new">Create a New Stage</a></h3>
+        <%- partial("header") %>
+
 <table>
   <thead>
     <tr>
@@ -19,3 +20,7 @@
   <% }) %>
   </tbody>
 </table>
+
+        <%- partial("stage-list") %>
+
+        <%- partial("footer") %>
