made "Create new room" in stages list work
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/stage-list.ejs
+++ b/views/stage-list.ejs
@@ -69,7 +69,7 @@
     <small>Stage created by Chris Powers</small>
   </a>
 
-  <a href="#" id="create">
+  <a href="/stages/new" id="create">
     <p>Create your own stage&nbsp;now</p>
   </a>
 
