--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,6 +11,12 @@
             <h1><%= stage.name %></h1>
 		<a href="/invite" title="Invite coders to join you" class="button invite">Invite Coders</a>
 	
+                <% contributors.forEach(function(user) { %>
+                <p>Contributor <%= user.github.name %></p>
+                <% }) %>
+                <% if(everyauth.loggedIn) { %>
+                <p>Current User <%= everyauth.github.user.name %></p>
+                <% } %>
 		<form id="stage-settings">
 	
 			<fieldset>
