Reading some data from the DOM.

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,6 @@
 <script>
   document.documentElement.setAttribute('data-pusherchannel', '<%= stage.channel %>' );
+  document.documentElement.setAttribute('data-editorlanguage', '<%= stage.language %>');
   document.documentElement.setAttribute('data-iscontributor', <%= isContributor(contributors, everyauth) ? "true" : "false" %>);
 </script>
 
