--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,6 +12,7 @@
 	
             <h1><%= stage.name %></h1>
 		<a href="/invite" title="Invite coders to join you" class="button invite">Invite Coders</a>
+		<a href="#" id="runCode" class="button">Run</a>
                 <!--	
                 <% contributors.forEach(function(user) { %>
                 <p>Contributor <%= user.github.name %></p>
