--- a/views/front.ejs
+++ b/views/front.ejs
@@ -6,6 +6,8 @@
   <p>Like Gist without the waiting.</p>
 </article>
 
+        <%- partial("featured") %>
+        
         <%- partial("stage-list") %>
 
         <%- partial("footer") %>
