--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -344,8 +344,12 @@ a{
   margin-top: -20px;
 }
 
-.invite {
+.invite, #run-code {
   margin-top: 10px;
+}
+
+#run-code {
+  margin-left: 10px;
 }
 
 #stage-settings, #editor {
@@ -1066,11 +1070,14 @@ form[action="/stages"] {
   
     /* STAGE */
     
-    .invite {
+    .invite, #run-code {
       position: absolute;
       top: 4.1%;
       right: 3.5714286%;
       margin-top: 0;
+    }
+    #run-code {
+      right: 28%;
     }
     
     #stage-settings, #editor {
@@ -1379,6 +1386,10 @@ form[action="/stages"] {
         @include float(left);
       }
 
+    }
+
+    #run-code {
+      right: 25%;
     }
 
   /* STAGE LIST */
