--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -106,7 +106,7 @@ body {
   font-size: 62.5%; /* Reset 1em to 10px */
   line-height: 1.3;
   min-height: 100%;
-  background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 90% 105% no-repeat $white;
+  background: url(../img/bg/noise.png) center top repeat, url(../img/logos/stamp.png) 90% 105% no-repeat $white;
   @include sans(500);
 }
 
@@ -148,7 +148,7 @@ header h1 {
     height: 50px;
     width: 203px;
     padding: 5px;
-    background: url(../img/logo/cs-logo.png) 5px 5px no-repeat;
+    background: url(../img/logos/cs-logo.png) 5px 5px no-repeat;
     border-top: 1px solid transparent;
     @include rounded(5px);
     &:hover {
@@ -781,13 +781,32 @@ footer {
   left: 50%;
   margin-left: -300px;
   width: 600px;
-  background: url(../img/bg/noise.png) center top repeat, url(../img/logo/stamp.png) 98% 150% no-repeat $white;
+  background: url(../img/bg/noise.png) center top repeat, url(../img/logos/stamp.png) 98% 150% no-repeat $white;
   @include rounded(10px);
   -webkit-box-shadow: 0 0 20px $black50;
   .jqmClose {
     position: relative;
     left: 20px;
     top: -15px;
+  }
+}
+
+.git-modal {
+  padding: 20px;
+  overflow: hidden;
+  img {
+    @include float(left);
+  }
+  a.login {
+    display: block;
+    text-align: center;
+    font-size: 2.2em;
+    margin-top: 10px;
+    margin-bottom: .75em;
+    @include rounded(10px);
+  }
+  p {
+    font-size: 1.6em;
   }
 }
 
