Added login button to stage list if logged out
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/stage-list.ejs
+++ b/views/stage-list.ejs
@@ -89,4 +89,10 @@
   </a>
   <% } %>
 
+  <% if(!everyauth.loggedIn) { %>
+  <a href="/auth/github" id="create">
+    <p>Login to create your own&nbsp;stage</p>
+  </a>
+  <% } %>
+
 </section>
