--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -2,7 +2,7 @@
         <ol>
                 <li class="support"><a href="/support" title="Having Problems?">Support</a></li>
             <% if(everyauth.loggedIn) { %>
-                <li class="create-room"><a href="/stages/new" title="Create a Room and Start Coding">Create a Room</a></li>
+                <li class="create-room"><a href="/stages/new" title="Create a Stage and Start Coding">Create a Stage</a></li>
             <% } %>
             <% if(!everyauth.loggedIn) { %>
                 <li class="login"><a href="/auth/github" title="Login through GitHub">Login through GitHub</a></li>
