Updated New Stage form with verbiage and user name

--- a/views/stages/new.ejs
+++ b/views/stages/new.ejs
@@ -1,16 +1,16 @@
 <form action="/stages" method="POST">
   
-  <h1>Create A New Room</h1>
+  <h1>Create A New Stage</h1>
 
   <% if(!everyauth.loggedIn) { %>
       <a href="/auth/github" title="Login through GitHub" class="login">Login through GitHub</a>
   <% } %>
   <% if(everyauth.loggedIn) { %>
-      <p class="loggedin">You're logged in as <strong>[username]</strong>. <a href="/logout" title="Logout of Coding Stage">Logout</a></li>
+  <p class="loggedin">You're logged in as <strong><%= everyauth.user.github.name %></strong>. <a href="/logout" title="Logout of Coding Stage">Logout</a></li>
   <% } %>
   
   <fieldset>
-    <label for="room-name">Room Name</label>
+    <label for="room-name">Stage Name</label>
     <input type="text" name="stage[name]" id="room-name" />
 
     <label for="language">Language</label>
@@ -21,6 +21,6 @@
     </select>
   <fieldset>
 
-  <input type="submit" value="Create Your Room">
+  <input type="submit" value="Create Your Stage">
 
 </form>
