--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,7 +59,7 @@
 
   <%- body %>
 
-<section class="jqModal"><article></article><a href="#" class="jqmClose">Close this box</a></section>   
+<section class="jqModal" id="create-room"><%- partial("stages/new") %><a href="#" class="close">Close this box</a></section>   
 </body>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
