--- a/views/login-modal.ejs
+++ b/views/login-modal.ejs
@@ -1,4 +1,4 @@
-<section class="git-modal">
+<section id="git-modal">
   <img src="/_/img/logos/github.png" width="259px" height="200px" />
   <a href="/auth/github" class="login">Login with your GitHub Account</a>
   <p>You'll need to login before you can contribute to the code on this stage.</p>
