Implmented language support.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,6 +92,7 @@
   <% if(stage) { %>
     <script src="/_/js/watchers.js"></script>
     <script src="/_/js/comments.js"></script>
+    <script src="/_/js/ace/mode-<%= stage.language.toLowerCase() %>.js" type="text/javascript" charset="utf-8"></script>
   <% } %>
   <% if(otKey && otToken) { %>
     <script src="http://staging.tokbox.com/v0.91/js/TB.min.js"></script>
