--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -125,13 +125,15 @@
 		  <div id="tokbox-team-4-placeholder"></div>
 		</article>
 
-		<a href="#" class="button">Join the video chat</a>
+		<!-- <a href="#" class="button">Join the video chat</a> -->
 
 	</section>
 	
 	<section id="attendees">
-		
-        <h1>Who's Watching  <!--<mark>(<span id="watchers-count"><%= stage.watchers.length %></span>)</mark>--><br /><a href="#">Request control of the stage</a></h1>
+		    
+		    <a href="#" class="button">I'd like to contribute</a>
+		    
+        <h1>Who's Watching  <!--<mark>(<span id="watchers-count"><%= stage.watchers.length %></span>)</mark>--></h1>
 		
 		<ol>
 	            <% stage.watchers.forEach(function(watcher) { %>
