--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -131,7 +131,9 @@
 	
 	<section id="attendees">
 		    
-		    <a href="#" class="button">I'd like to contribute</a>
+		    <a href="#" class="button" id="contribute">I'd like to contribute</a>
+		    
+		    <a href="#" class="button" id="control">Ask for control</a>
 		    
         <h1>Who's Watching  <!--<mark>(<span id="watchers-count"><%= stage.watchers.length %></span>)</mark>--></h1>
 		
