Updated how videos are added

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,7 +12,7 @@
 	<section id="stage">
 	
             <h1><%= stage.name %></h1>
-		<a href="/invite" title="Invite coders to join you" class="button invite">Invite Coders</a>
+            <!-- <a href="/invite" title="Invite coders to join you" class="button invite">Invite Coders</a> -->
 		<a href="#" id="run-code" class="button">Run</a>
                 <!--	
                 <% contributors.forEach(function(user) { %>
@@ -108,6 +108,7 @@
 <aside>
 
 	<section id="video-chat">
+        <!--
 
 		<article id="tokbox-team-1" class="baton">
 		  <div id="tokbox-team-1-placeholder"></div>
@@ -125,7 +126,8 @@
 		  <div id="tokbox-team-4-placeholder"></div>
 		</article>
 
-		<!-- <a href="#" class="button">Join the video chat</a> -->
+                <a href="#" class="button">Join the video chat</a> 
+                -->
 
 	</section>
 	
