--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -1,14 +1,14 @@
 <div id="notification">
   <section id="approve-collaborators">
-    People want to collaborate with you: 
+    Promote to collaborator? 
       <article>
         [Username] <a href="#" class="approve">Approve</a> <a href="#" class="dismiss">Dismiss</a>
       </article>
   </section>
   <section id="approve-handoff">
-    <article>
-      [Username] <a href="#" class="approve">Approve</a> <a href="#" class="dismiss">Dismiss</a>
-    </article>
-    : would like control of the room
+    Pass control of the room?
+      <article>
+        [Username] <a href="#" class="approve">Approve</a> <a href="#" class="dismiss">Dismiss</a>
+      </article>
   </section>
 </div>
