--- a/views/stages/new.ejs
+++ b/views/stages/new.ejs
@@ -18,6 +18,8 @@
       <option value="JavaScript">JavaScript</option>
       <option value="HTML">HTML</option>
       <option value="CSS">CSS</option>
+      <option value="Ruby">Ruby</option>
+      <option value="CoffeeScript">CoffeeScript</option>
     </select>
   <fieldset>
 
